--- a/about.html
+++ b/about.html
@@ -36,10 +36,13 @@
           for you on my Creative Mind channel.
           Thanks to a creative mind and through music, you can create a world of your own, can't you?</strong></p>
     </div> 
+  
      <div class="info-right">
      <img src="./img/creativeeee.png" alt="Creative Mind">
     </div>
   </div>
+</div>
+  </section>
   
   <footer id="main-footer">
     <p>Creative Mind &copy; 2022, All Rights Reserved</p>
