--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,31 @@
         <button type="submit" class="btn">Submit</button>
         </form>
      </div>
-</section>
-   
+   </section>
 
-    </div>
-  </section>
+   <section id="contact-info" class="bg-dark">
+    <div clas="container">
+      <div class="box">
+        <i class="fa-solid fa-envelope fa-3x"></i>
+          <h3>Mail</h3>
+          <p>mindc847@yahoo.com</p>
+     </div>
+        <div class="box">
+        <i class="fa-brands fa-youtube fa-3x"></i>
+           <h3>Youtube</h3>
+        <p>https://www.youtube.com/channel/UC7iv4Kf0HNvx-nK2hBTmWzg</p>
+     </div>
+        <div class="box">
+        <i class="fa-brands fa-twitter fa-3x"></i>
+           <h3>Creative Mind</h3>
+           <p>https://twitter.com/home</p>
+           </div>
+      </div>
+
+      <div class="clr"></div>
+      
+   </section>
+
 
   <footer id="main-footer">
     <p>Creative Mind &copy; 2022, All Rights Reserved</p>
