--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <div class="container">
         <div class="showcase-content">
              <h1><span class="text-primary">Welcome</span> to Creative Mind channel</h1>
-             <p class="lead">I am Ella, founder of the Creative Mind channel. My purpose and passion is to help you relax, unwind and rejuvenate through better sleep, reduced stress, greater concentration and improved mental wellness. Music can play an effective role in helping us lead better, fruitful lives. Listening to specific kinds of music at specific times of the day has been shown to be helpful in maintaining good health.</p> 
+             <p class="lead">I am Ella, founder of the Creative Mind channel. My purpose and passion
+                 is to help you relax, unwind and rejuvenate through better sleep, reduced stress, greater
+                 concentration and improved mental wellness. Music can play an effective role in helping us 
+                 lead better, fruitful lives. Listening to specific kinds of music at specific times of the 
+                 day has been shown to be helpful in maintaining good health.</p> 
              <a class="btn" href="about.html">About my page</a>
         </div>
 
@@ -38,9 +42,12 @@
     <section id="home-info" class="bg-dark">
         <div class="info-img"></div>
         <div class="info-content">
-            <h2><span class="text-primary">Music and Relaxation</span></h2>
-            <p>Healing sounds (sound therapy) for the well-being of body and soul.
-            Sound therapy is ideal for calming and de-stressing the body. They create a calm atmosphere for studying and having better concentration, working at home, reading or just relaxing after a long day. They help to relax and fall asleep serenely, for a restful sleep. Calm atmosphere for meditation, massages, yoga, spa and more. </p>
+           <h2><span class="text-primary">Music and Relaxation</span></h2>
+           <p>Healing sounds (sound therapy) for the well-being of body and soul.
+              Sound therapy is ideal for calming and de-stressing the body. They create a calm 
+              atmosphere for studying and having better concentration, working at home, reading
+              or just relaxing after a long day. They help to relax and fall asleep serenely, 
+              for a restful sleep. Calm atmosphere for meditation, massages, yoga, spa and more. </p>
 
         <a href="about.html" class="btn btn-light">Read More</a>
 
@@ -50,22 +57,29 @@
     <section id="features">
         <div class="box bg-light">
         <i class="fa-solid fa-music fa-3x"></i>
-          <h3>Piano Music</h3>
-          <p>When you regularly listen to piano music, you can help to remain much happier in all kinds of situations. Listening to piano music often has a calming impact that can help to alleviate and reduce negative emotions, while increasing the positive ones. </p>
+           <h3>Piano Music</h3>
+           <p>When you regularly listen to piano music, you can help to remain much happier in all
+              kinds of situations. Listening to piano music often has a calming impact that can help 
+              to alleviate and reduce negative emotions, while increasing the positive ones. </p>
      </div>
         <div class="box bg-primary">
         <i class="fa-brands fa-teamspeak fa-3x"></i>
            <h3>Gaming Music</h3>
-        <p>Music can help you to better focus on gaming by eliminating or quieting outside distractions. It can also help to keep your brain focused on the task at hand and keep it from wandering around.There are a lot of benefits from listening to music while gaming.</p>
+           <p>Music can help you to better focus on gaming by eliminating or quieting outside distractions. 
+              It can also help to keep your brain focused on the task at hand and keep it from wandering around.
+              There are a lot of benefits from listening to music while gaming.</p>
      </div>
         <div class="box bg-light">
         <i class="fa-solid fa-cloud-moon fa-3x"></i>
            <h3>Sleep Music</h3>
-           <p>Relaxing music triggers changes to the body that in many ways mimic a sleep state. A slower heart rate, slower breathing, lower blood pressure are all physiological changes that make possible the process of falling asleep and staying aslee.</p>
+           <p>Relaxing music triggers changes to the body that in many ways mimic a sleep state. A slower heart 
+              rate, slower breathing, lower blood pressure are all physiological changes that make possible the 
+              process of falling asleep and staying aslee.</p>
       </div>
+
   </section>
 
-   <div class="clr"></div>
+  <div class="clr"></div>
 
    <footer id="main-footer">
       <p>Creative Mind &copy; 2022, All Rights Reserved</p>
